--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2004-05-11  Sven Neumann  <sven@gimp.org>
 
+	* app/gui/user-install-dialog.c: removed the "Aborting
+	Installation" page. We added it as a nice little gimmick but
+	obviously people don't understand it's purpose. Fixes bug #142281.
+
+2004-05-11  Sven Neumann  <sven@gimp.org>
+
 	* app/widgets/Makefile.am
 	* app/widgets/widgets-types.h
 	* app/widgets/gimpcontainercombobox.[ch]: added new widget, almost
