* libgimp/gimp.def * libgimpbase/gimpbase.def: updated
git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13227 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-05-11  Michael Schumacher <schumaml@cvs.gnome.org>		
+        
+	* libgimp/gimp.def
+	* libgimpbase/gimpbase.def: updated
+	
 2004-05-11  Sven Neumann  <sven@gimp.org>
 
 	* app/gui/user-install-dialog.c: removed the "Aborting
@@ -2388,7 +2393,7 @@
 
 	* app/core/gimppalette-import.[ch]
 	* app/gui/palette-import-dialog.c: added palette import from RIFF
-	palette files based on a patch from ÉRDI Gergõ (bug #129788).
+	palette files based on a patch from ÃRDI GergÃµ (bug #129788).
 
 2004-04-15  Michael Natterer  <mitch@gimp.org>
 
@@ -2585,7 +2590,7 @@
 
 	* app/pdb/*_cmds.c: regenerated.
 
-2004-04-14  Raphaël Quinet  <quinet@gamers.org>
+2004-04-14  RaphaÃ«l Quinet  <quinet@gamers.org>
 
 	* plug-ins/script-fu/scripts/copy-visible.scm: New version of the
 	script that works on a temporary copy of the image instead of
@@ -2605,7 +2610,7 @@
 
 	* Made 2.0.1 release.
 
-2004-04-13  Raphaël Quinet  <quinet@gamers.org>
+2004-04-13  RaphaÃ«l Quinet  <quinet@gamers.org>
 
 	* plug-ins/common/mng.c (query, run): Workaround for bug #139947:
 	do not register the plug-in for INDEXED* modes and do not declare
@@ -2784,11 +2789,11 @@
 	* configure.in (ALL_LINGUAS): revert addition of "is" until all
 	.po files are there.
 
-2004-04-07  Samúel Jón Gunnarsson  <sammi@techattack.nu>
+2004-04-07  SamÃºel JÃ³n Gunnarsson  <sammi@techattack.nu>
 
 	* configure.in: Added "is" to ALL_LINGUAS
 
-2004-04-06  Iñaki Larrañaga  <dooteo@euskalgnu.org>
+2004-04-06  IÃ±aki LarraÃ±aga  <dooteo@euskalgnu.org>
 
 	* configure.in: Added "eu" (Basque) to ALL_LINGUAS.
 
