--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-05-11  Sven Neumann  <sven@gimp.org>
+
+	* app/widgets/gimpcontainertreeview.c: minor cleanup.
+
 2004-05-11  Michael Schumacher <schumaml@cvs.gnome.org>		
         
 	* libgimp/gimp.def
