--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,19 @@
+2004-05-11  Michael Natterer  <mitch@gimp.org>
+
+	* app/widgets/gimpcontainercombobox.c: correctly get the default
+	GimpContainerViewInterface implementation and chain up to it for
+	clear_items(). Update the preview renderers on "update", enable
+	deselecting everything.
+
+	* app/widgets/gimpimagedock.[ch]
+	* app/gui/file-new-dialog.c
+	* app/gui/palette-import-dialog.c
+	* app/gui/preferences-dialog.c
+	* app/gui/stroke-dialog.c: use GimpContainerComboBox instead of
+	GimpContainerMenuImpl.
+
+	* app/gui/palette-import-dialog.c: cleanup.
+
 2004-05-11  Sven Neumann  <sven@gimp.org>
 
 	* docs/gimptool.1.in: fixed spelling.
