--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,14 @@
 2004-05-11  Michael Natterer  <mitch@gimp.org>
 
+	* app/widgets/Makefile.am
+	* app/widgets/widgets-types.h
+	* app/widgets/gimpcontainermenu.[ch]
+	* app/widgets/gimpcontainermenuimpl.[ch]
+	* app/widgets/gimpmenuitem.[ch]: removed. Obsoleted by
+	GimpContainerViewInterface implemented by GimpContainerComboBox.
+
+2004-05-11  Michael Natterer  <mitch@gimp.org>
+
 	* app/actions/actions.[ch]: added action_data_get_context() and
 	macro return_if_no_context().
 
