--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2004-05-11  Michael Natterer  <mitch@gimp.org>
 
+	* app/actions/images-commands.c: added missing #includes.
+
+2004-05-11  Michael Natterer  <mitch@gimp.org>
+
 	* app/widgets/Makefile.am
 	* app/widgets/widgets-types.h
 	* app/widgets/gimpcontainermenu.[ch]
