--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-05-12  Michael Natterer  <mitch@gimp.org>
+
+	* app/actions/gradients-actions.c
+	* app/actions/palettes-actions.c
+	* app/actions/patterns-actions.c: added/fixed tooltips.
+
 2004-05-11  Michael Natterer  <mitch@gimp.org>
 
 	* configure.in: define G*_DISABLE_DEPRECATED for all G* modules
