2004-05-12  Sven Neumann  <sven@gimp.org>
	* app/Makefile.am: make it compile again.

	* app/app-sections.txt
	* app/app.types: some minor updates, needs a lot more work.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13242 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/devel-docs/ChangeLog
+++ b/devel-docs/ChangeLog
@@ -1,16 +1,23 @@
+2004-05-12  Sven Neumann  <sven@gimp.org>
+
+	* app/Makefile.am: make it compile again.
+
+	* app/app-sections.txt
+	* app/app.types: some minor updates, needs a lot more work.
+
 2004-05-06  Michael Natterer  <mitch@gimp.org>
 
 	* libgimp/libgimp-sections.txt: added gimp_plugin_menu_register().
 
-	* devel-docs/libgimp/tmpl/gimpplugin.sgml: regenerated.
+	* libgimp/tmpl/gimpplugin.sgml: regenerated.
 
 2004-05-05  Sven Neumann  <sven@gimp.org>
 
 	* libgimpwidgets/libgimpwidgets-sections.txt: updated.
 
-	* devel-docs/libgimpwidgets/tmpl/gimpframe.sgml
-	* devel-docs/libgimpwidgets/tmpl/gimphelpui.sgml
-	* devel-docs/libgimpwidgets/tmpl/gimpoffsetarea.sgml: regenerated.
+	* libgimpwidgets/tmpl/gimpframe.sgml
+	* libgimpwidgets/tmpl/gimphelpui.sgml
+	* libgimpwidgets/tmpl/gimpoffsetarea.sgml: regenerated.
 
 2004-05-02  Sven Neumann  <sven@gimp.org>
 
