--- a/po-plug-ins/ChangeLog
+++ b/po-plug-ins/ChangeLog
@@ -1,3 +1,8 @@
+2004-05-12  Dmitry G. Mastrukov  <dmitry@taurussoft.org>
+
+	* ru.po: Updated Russian translation
+	from Russian team <gnome-cyr@gnome.org>.
+
 2004-05-07  Michael Natterer  <mitch@gimp.org>
 
 	* de.po: updated a bit after menu registration cleanup.
