--- a/tips/ChangeLog
+++ b/tips/ChangeLog
@@ -1,3 +1,8 @@
+2004-05-12  Dmitry G. Mastrukov  <dmitry@taurussoft.org>
+
+	* ru.po: Updated Russian translation
+	from Russian team <gnome-cyr@gnome.org>.
+
 2004-05-10  Sven Neumann  <sven@gimp.org>
 
 	* gimp-tips.xml.in: the menu's called "Layer", not "Layers" (bug
